# vertiport-autonomy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  curriculum_learning_plan.md  pyproject.toml  requirements.txt  setup.py  software_requirements_v1.md
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst
docs/api/: modules.rst  vertiport_autonomy.agents.drl.rst  vertiport_autonomy.agents.rst  vertiport_autonomy.config.rst  vertiport_autonomy.core.rst  vertiport_autonomy.evaluation.rst  vertiport_autonomy.rst  vertiport_autonomy.training.rst
docs/tutorials/: index.rst
scenarios/: easy_world.yaml  intermediate_world.yaml  steady_flow.yaml
scripts/: evaluate.py  train.py  train_curriculum.py
src/vertiport_autonomy/: __init__.py
src/vertiport_autonomy/agents/: __init__.py  base.py  heuristic.py
src/vertiport_autonomy/agents/drl/: __init__.py
src/vertiport_autonomy/config/: __init__.py  loader.py  schema.py
src/vertiport_autonomy/core/: __init__.py  environment.py  event_logger.py  simulator.py
src/vertiport_autonomy/evaluation/: __init__.py  framework.py  metrics.py
src/vertiport_autonomy/training/: __init__.py  curriculum.py  trainer.py
tests/: __init__.py
tests/integration/: test_training_pipeline.py
tests/unit/: test_curriculum.py  test_environment.py
